Stay case test updated